--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -26,7 +26,7 @@ jobs:
              })
             
       - name: Create project cards
-        if: contains( github.event.issue.*.labels.name, 'bug' )
+        if: contains( github.event.issue.labels.*.name, 'bug' )
         uses: actions/github-script@0.8.0
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
